Fix lists not showing a dot in the redactor editor.
Closes #6.

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -99,7 +99,7 @@ footer,
     form style customizations
 */
 form {
-    ul {
+    label > ul {
         list-style: none;
 
         margin: 0;
